--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -30,7 +30,11 @@ sonar.exclusions = \
     source/loadtest/**/*, \
     source/tools/**/*, \
     source/**/*.vue, \
-    source/**/coverage.xml
+    source/**/coverage.xml, \
+    source/**/www/**/*, \
+    source/**/*.html, \
+    source/**/*.js, \
+    source/token-authorizer/chalice/app.py
 
 
 # sonar.tests=source/test
