--- a/source/sample-waiting-room-site/package.json
+++ b/source/sample-waiting-room-site/package.json
@@ -11,6 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/core": "^7.23.2",
     "axios": "^0.27.2",
     "axios-retry": "^3.3.1",
     "bootstrap": "^5.1.1",
@@ -18,14 +19,16 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "simple-statistics": "^7.7.0",
-    "vue": "^3.0.0",
+    "vue": "^3.3.7",
     "vue-router": "^4.0.0-0",
     "vue-timers": "^2.0.4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "postcss": "^8.4.31",
+    "@vue/component-compiler-utils": "^3.3.0",
     "@vue/babel-preset-app": "^5.0.8",
-    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
@@ -46,6 +49,16 @@
     ],
     "parserOptions": {},
     "rules": {}
+  },
+  "overrides": {
+    "postcss": "^8.4.31",
+    "semver": "^7.5.2",
+    "word-wrap": "^1.2.4"
+  },
+  "resolutions": {
+    "postcss": "^8.4.31",
+    "semver": "^7.5.2",
+    "word-wrap": "^1.2.4"
   },
   "browserslist": [
     "> 1%",
