Update templates, scripts to use python3.11

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,5 @@
-FROM public.ecr.aws/amazonlinux/amazonlinux:2
+FROM public.ecr.aws/lambda/python:3.11
 CMD bash
-RUN mkdir -p site-packages/
-RUN amazon-linux-extras enable python3.8
-RUN yum install -y python3.8
-RUN pip3.8 install pip --upgrade
-RUN pip install -t site-packages/ jwcrypto
+WORKDIR /site-packages
+RUN pip3.11 install --upgrade pip
+RUN pip3.11 install -t . jwcrypto
