--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -2,4 +2,4 @@ FROM public.ecr.aws/lambda/python:3.11
 CMD bash
 WORKDIR /site-packages
 RUN pip3.11 install --upgrade pip
-RUN pip3.11 install -t . jwcrypto
+RUN pip3.11 install -t . jwcrypto==1.5.6
