--- a/source/sample-waiting-room-site/package.json
+++ b/source/sample-waiting-room-site/package.json
@@ -58,12 +58,15 @@
     "postcss": "^8.4.31",
     "semver": "^7.5.2",
     "word-wrap": "^1.2.4",
-    "send": "0.19.0"
+    "send": "0.19.0",
+    "cross-spawn": "7.0.6"
   },
   "resolutions": {
     "postcss": "^8.4.31",
     "semver": "^7.5.2",
-    "word-wrap": "^1.2.4"
+    "word-wrap": "^1.2.4",
+    "send": "0.19.0",
+    "cross-spawn": "7.0.6"
   },
   "browserslist": [
     "> 1%",
