--- a/source/core-api-authorizers-sample/custom_resources/requirements.txt
+++ b/source/core-api-authorizers-sample/custom_resources/requirements.txt
@@ -1,2 +1,6 @@
-crhelper
-requests
+certifi==2024.8.30 ; python_full_version > "3.9.0"
+charset-normalizer==3.4.0 ; python_full_version > "3.9.0"
+crhelper==2.0.11 ; python_full_version > "3.9.0"
+idna==3.10 ; python_full_version > "3.9.0"
+requests==2.32.3 ; python_full_version > "3.9.0"
+urllib3==2.2.3 ; python_full_version > "3.9.0"
