--- a/source/token-authorizer/chalice/requirements.txt
+++ b/source/token-authorizer/chalice/requirements.txt
@@ -1,2 +1,5 @@
-requests
-urllib3>=2.2.2
+certifi==2024.8.30 ; python_full_version > "3.9.0"
+charset-normalizer==3.4.0 ; python_full_version > "3.9.0"
+idna==3.10 ; python_full_version > "3.9.0"
+requests==2.32.3 ; python_full_version > "3.9.0"
+urllib3==2.2.3 ; python_full_version > "3.9.0"
