--- a/deployment/pyproject.toml
+++ b/deployment/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "deployment"
-version = "1.1.11"
+version = "1.1.13"
 description = "Deployment of Virtual Waiting Room on AWS"
 authors = ["Amazon Web Services"]
 package-mode=false
@@ -22,6 +22,8 @@ jwcrypto = "1.5.6"
 python-dateutil = "2.9.0"
 redis = "5.1.1"
 testresources = "2.0.1"
+setuptools = "78.1.1"
+cryptography = "44.0.1"
 virtual_waiting_room_on_aws_common = {path = "../source/shared/virtual-waiting-room-on-aws-common"} 
 
 [build-system]
