--- a/source/control-panel/package.json
+++ b/source/control-panel/package.json
@@ -6,7 +6,7 @@
     "url": "https://aws.amazon.com/solutions",
     "organization": true
   },
-  "version": "1.1.13",
+  "version": "1.1.14",
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
@@ -15,21 +15,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/core": "^7.23.2",
     "aws4fetch": "^1.0.13",
     "bootstrap": "^5.1.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
-    "vue": "^3.0.0",
+    "vue": "^3.3.7",
     "vue-timers": "^2.0.4",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
     "@vue/babel-preset-app": "^5.0.8",
-    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "@vue/compiler-sfc": "^3.2.37",
+    "@vue/compiler-sfc": "^3.3.7",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "naive-ui": "^2.19.3",
@@ -48,18 +48,12 @@
     "rules": {}
   },
   "overrides": {
+    "cross-spawn": "^7.0.6",
     "postcss": "^8.4.31",
+    "webpack-dev-server": "^5.2.1",
     "semver": "^7.5.2",
     "word-wrap": "^1.2.4",
-    "send": "0.19.0",
-    "cross-spawn": "7.0.6"
-  },
-  "resolutions": {
-    "postcss": "^8.4.31",
-    "semver": "^7.5.2",
-    "word-wrap": "^1.2.4",
-    "send": "0.19.0",
-    "cross-spawn": "7.0.6"
+    "send": "0.19.0"
   },
   "browserslist": [
     "> 1%",
