--- a/source/core-api-authorizers-sample/custom_resources/pyproject.toml
+++ b/source/core-api-authorizers-sample/custom_resources/pyproject.toml
@@ -1,13 +1,14 @@
 [tool.poetry]
 name = "custom-resources"
-version = "1.1.13"
+version = "1.1.14"
 description = ""
 authors = ["Amazon Web Services"]
 
 [tool.poetry.dependencies]
 python = ">3.9"
 crhelper = "2.0.11"
-requests = "2.32.3"
+requests = "2.32.4"
+urllib3 = "2.5.0"
 
 
 [build-system]
