--- a/source/core-api/custom_resources/pyproject.toml
+++ b/source/core-api/custom_resources/pyproject.toml
@@ -1,16 +1,16 @@
 [tool.poetry]
 name = "custom-resources"
-version = "1.1.13"
-description = "Custom resources for core APIs of Virtual Waitin Room on AWS"
+version = "1.1.14"
+description = "Custom resources for core APIs of Virtual Waiting Room on AWS"
 authors = ["Amazon Web Services"]
 package-mode = false
 
 [tool.poetry.dependencies]
 python = ">3.9"
 crhelper = "2.0.11"
-requests = "2.32.3"
+requests = "2.32.4"
 aws-requests-auth = "0.4.3"
-urllib3 = "2.2.3"
+urllib3 = "2.5.0"
 
 
 [build-system]
