--- a/source/openid-waitingroom/custom_resources/pyproject.toml
+++ b/source/openid-waitingroom/custom_resources/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "custom-resources"
-version = "1.1.13"
-description = "Custom resources for open Id waiting room of Virtual Waitin Room on AWS"
+version = "1.1.14"
+description = "Custom resources for open Id waiting room of Virtual Waiting Room on AWS"
 authors = ["Amazon Web Services"]
 
 [tool.poetry.dependencies]
 python = ">3.9"
 crhelper = "2.0.11"
-requests = "2.32.3"
-urllib3 = "2.2.3"
+requests = "2.32.4"
+urllib3 = "2.5.0"
 
 
 
