--- a/source/openid-waitingroom/www/package.json
+++ b/source/openid-waitingroom/www/package.json
@@ -1,6 +1,6 @@
 {
     "name": "openid-waitingroom",
-    "version": "1.1.13",
+    "version": "1.1.14",
     "description": "A Virtual Waiting Room on AWS OpenID Adaptor",
     "author": {
         "name": "Amazon Web Services",
@@ -15,7 +15,13 @@
     },
     "dependencies": {
         "axios": "^1.7.7",
-        "bootstrap": "^5.0.0-beta3",
+        "bootstrap": "^5.1.1",
         "jquery": "^3.6.0"
+    },
+    "overrides": {
+        "cross-spawn": "^7.0.6",
+        "postcss": "^8.4.31",
+        "semver": "^7.5.2",
+        "word-wrap": "^1.2.4"
     }
 }
