--- a/source/token-authorizer/chalice/pyproject.toml
+++ b/source/token-authorizer/chalice/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "custom-resources"
-version = "1.1.13"
-description = "Token Authorizer for template of Virtual Waitin Room on AWS"
+version = "1.1.14"
+description = "Token Authorizer for template of Virtual Waiting Room on AWS"
 authors = ["Amazon Web Services"]
 
 [tool.poetry.dependencies]
 python = ">3.9"
-requests="2.32.3"
-urllib3 = "2.2.3"
+requests="2.32.4"
+urllib3 = "2.5.0"
 
 
 [build-system]
